make changes in the making pages fixed some error

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -143,7 +143,9 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
+    scroll-behavior: smooth;
   }
 }
