--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -149,4 +149,9 @@
     scroll-behavior: smooth;
     padding-right: 0px !important;
   }
+
+  @keyframes shimmer {
+    0% { transform: translateX(-100%); }
+    100% { transform: translateX(100%); }
+  }
 }
